2009-12-08  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRY_CIPHER_MODE_AESWRAP): New.

2009-12-08  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (LTRCCOMPILE): Refactor with ...
	(RCCOMPILE): ... this new macro.  Add $(libgcrypt_la_CPPFLAGS).
	(SUFFIXES): Add .lo.
	(.rc.o): Change to ...
	(.rc.lo): ... this implicit rule.
	(gcrypt_res_ldflag): Removed.
	(gcrypt_res): Use libtool object file name here.
	(libgcrypt_la_LDFLAGS): Remove gcrypt_res_ldflag usage.
	(libgcrypt_la_LIBADD): Add gcrypt_res.

2009-11-29  Werner Koch  <wk@g10code.com>

	* hwfeatures.c (detect_ia32_gnuc): Repalce "=r" by "+r" so that
	HAS-CPUDID is always initialized.  Thanks to Ben Hutchings for
	pointing out this problem.

2009-08-05  Werner Koch  <wk@g10code.com>

	* ath.h: Include sys/msg.h.

2009-07-02  Werner Koch  <wk@g10code.com>

	* fips.c (_gcry_initialize_fips_mode): Do not use FIPS mode if
	/proc/.../fips_enabled has insufficient permissions.

	* dumpsexp.c (main): Fix handling multiple files.
	(parse_and_print): Implement hex and octal escaping.

	* sexp.c (unquote_string): Remove superfluous clearing of ESC.
	* dumpsexp.c (parse_and_print): Add missing break.
	(main): Fix return value.
	Reported by Fabian Keil.

2009-02-16  Werner Koch  <wk@g10code.com>

	* ath.h [HAVE_SYS_SELECT_H]: Include <sys/select.h> for fd_set.
	[!HAVE_SYS_SELECT_H]: Include <sys/time.h>.  Move inclusion of
	config.h to the top.  The actual configure check was already
	there.

	* sexp.c: Remove memory.h.
	* mpi.h: Remove memory.h.  Add string.h.

2009-02-02  Werner Koch  <wk@g10code.com>

	* ath.h: Include sys/time.h.  Fixes bug#993.

2009-01-22  Werner Koch  <wk@g10code.com>

	* fips.c (_gcry_initialize_fips_mode): Remove superfluous const
	from static string.  Reported by Albert Chin.
	* hmac256.c (selftest): Ditto and change to unsigned char.

2008-12-10  Werner Koch  <wk@g10code.com>

	* hmac256.c (finalize): Fix for big endian hosts.

2008-12-05  Werner Koch  <wk@g10code.com>
