@@ -18,7 +18,7 @@ Caskey L. Dickson	   caskey@technocage.com
 Cees van de Griend	   cees-list@griend.xs4all.nl
 Charles Levert		   charles@comm.polymtl.ca
 Christian Biere            christianbiere@gmx.de
-Christian Grothoff         grothoff@cs.purdue.edu
+Christian Grothoff         christian at grothoff org
 Christian von Roques	   roques@pond.sub.org
 Christopher Oliver	   oliver@fritz.traverse.net
 Christian Recktenwald	   chris@citecs.de
