@@ -1,6 +1,6 @@
 # Makefile for cipher modules
 # Copyright (C) 1998, 1999, 2000, 2001, 2002,
-#               2003 Free Software Foundation, Inc.
+#               2003, 2009 Free Software Foundation, Inc.
 #
 # This file is part of Libgcrypt.
 #
