@@ -1,3 +1,7 @@
+2010-01-05  Werner Koch  <wk@g10code.com>
+
+	* gcrypt.h.in (GCRY_PK_ECDH): New.
+
 2009-12-08  Werner Koch  <wk@g10code.com>
 
 	* gcrypt.h.in (GCRY_CIPHER_MODE_AESWRAP): New.
